--- a/css/app.css
+++ b/css/app.css
@@ -33,9 +33,5 @@ body, html {
   right: 0;
   z-index: 101;
 }
-#mask {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 102;
-}
+
+/* Masks menu css */
