--- a/css/app.css
+++ b/css/app.css
@@ -33,5 +33,9 @@ body, html {
   right: 0;
   z-index: 101;
 }
-
-/* Masks menu css */
+#mask {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 102;
+}
